add notes on the plex proxy

--- a/plex-reverse-proxy/nginx/conf/plex-proxy.conf
+++ b/plex-reverse-proxy/nginx/conf/plex-proxy.conf
@@ -25,6 +25,6 @@ add_header  'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
 add_header  'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept' always;
 
 # Proxy
-proxy_pass  https://ipinfo.io/json;
+proxy_pass  http://plex:32400;
 
 allow all;
