--- a/plex-reverse-proxy/nginx/docker-compose.yml
+++ b/plex-reverse-proxy/nginx/docker-compose.yml
@@ -19,11 +19,10 @@ services:
     restart: unless-stopped
 
   proxy:
-    build:
-      context: nginx
+    image: brianrotich/plex-nginx-proxy
     container_name: plex-proxy
     healthcheck:
-      test: curl --fail http://localhost/healthz || exit 1  
+      test: curl --fail http://localhost/healthz || exit 1
       interval: 10s
       timeout: 2s
       retries: 5
@@ -35,3 +34,22 @@ services:
     restart: unless-stopped
     depends_on:
       - plex
+
+  # proxy-build:
+  #   build:
+  #     context: nginx
+  #   image: brianrotich/plex-nginx-proxy
+  #   container_name: plex-proxy
+  #   healthcheck:
+  #     test: curl --fail http://localhost/healthz || exit 1
+  #     interval: 10s
+  #     timeout: 2s
+  #     retries: 5
+  #     start_period: 3s
+  #   ports:
+  #     - '32400:32400'
+  #   volumes:
+  #     - "/etc/localtime:/etc/localtime:ro"
+  #   restart: unless-stopped
+  #   depends_on:
+  #     - plex
