--- a/plex-reverse-proxy/nginx/conf/nginx.conf
+++ b/plex-reverse-proxy/nginx/conf/nginx.conf
@@ -26,7 +26,7 @@ http {
     keepalive_timeout  65;
 
     server {
-      listen       32400;
+      listen       80;
       server_name  localhost;
 
       location /healthz {
@@ -34,8 +34,14 @@ http {
         add_header 'Content-Type' 'application/json';
         return 200 '{"status":"Healthy"}';
       }
+    }
 
-      location /web {
+    server {
+      listen       32400;
+      server_name  localhost;
+
+      location / {
+        # https://serverfault.com/questions/950857/use-include-in-nginx-server-block-but-where-to-save
         include includes/plex-proxy.conf;
 
         proxy_set_header Accept-Encoding "";
@@ -44,11 +50,6 @@ http {
         sub_filter        '</head>' '<meta name="viewport" content="width=device-width, initial-scale=1"></meta> <link rel="stylesheet" type="text/css" href="https://rawcdn.githack.com/Archmonger/Improved-Plex-Mobile/ee012bd9a34dfe8e66b17e6dae296d51334c569d/plex_mobile.css"> </head>';
         sub_filter_once   on;
         sub_filter_types  *;
-      }
-
-      location / {
-        # https://serverfault.com/questions/950857/use-include-in-nginx-server-block-but-where-to-save
-        include includes/plex-proxy.conf;
       }
     }
 }
