--- a/plex-reverse-proxy/nginx/conf/plex-proxy.conf
+++ b/plex-reverse-proxy/nginx/conf/plex-proxy.conf
@@ -4,7 +4,7 @@ proxy_set_header Upgrade $http_upgrade;
 proxy_set_header Connection "upgrade";
 
 # reverse proxy
-# proxy_set_header Host $host:$server_port;
+# proxy_set_header               Host $host:$server_port;
 proxy_set_header                X-Forwarded-For $proxy_add_x_forwarded_for;
 proxy_set_header                X-Forwarded-Proto $scheme;
 proxy_set_header                X-Forwarded-Server $host:$server_port;
@@ -14,15 +14,16 @@ proxy_set_header                X-Real-IP $remote_addr;
 proxy_redirect                  http:// $scheme://;
 proxy_pass_request_headers on;
 
-proxy_buffers                   32 16k;
-proxy_busy_buffers_size         64k;
+# disable proxy buffering
 proxy_cache                     off;
+proxy_buffering                 off;
+proxy_max_temp_file_size        0;
 
 # Headers for client browser NOCACHE + CORS origin filter 
-expires     off;
-add_header  'Cache-Control' 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
-add_header  'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-add_header  'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept' always;
+# expires     off;
+# add_header  'Cache-Control' 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+# add_header  'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+# add_header  'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept' always;
 
 # Proxy
 proxy_pass  http://plex:32400;
